--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,13 +4,13 @@
       %p.side-header__box__user-name ryu
       %ul.side-header__box__menu
         %li.side-header__box__menu__new-group
-          %a{:href => "/groups/new"}
+          = link_to  class: "/groups/new" do
             %i.fa.fa-edit
         %li.side-header__box__menu__edit-user
-          %a{:href => "/users/edit"}
+          = link_to  class: "/users/edit" do
             %i.fa.fa-cog
   .groups
-    %a{:href => "/groups/messages"}
+    = link_to  class: "/groups/messages" do
       .group
         %p.group__group-name sampleグループ
         %p.group__latest-message ど
@@ -22,7 +22,7 @@
       %ul.main-header__left-box__member-list
         Member：
         %li.main-header__left-box__member-list__member ryu
-    %a{:href => "/groups/edit"}
+    = link_to  class: "/groups/edit" do
       .main-header__edit-btn Edit
   .messages
     = render partial: "messages/message", locals: { message: @message }
