add-partial-template and scss
add partial template
delete same partial at index.html.haml

add side_bar.scss
delete chat-side at chatspace.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./colorpallet";
 @import "font-awesome";
+@import "side_bar";
 @import "chatspace";
 @import "modules/user";
