--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,7 @@
 @import "./colorpallet";
 @import "font-awesome";
 @import "side_bar";
+@import "config/colors";
+@import "modules/flash";
 @import "chatspace";
 @import "modules/user";
