--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,16 +1,19 @@
-.side-header
-  .side-header__box
-    %p.side-header__box__user-name
-      = current_user.name
-    %ul.side-header__box__menu
-      %li.side-header__box__menu__new-group
-        = link_to new_group_path do
-          %i.fa.fa-edit
-      %li.side-header__box__menu__edit-user
-        = link_to edit_user_path(current_user) do
-          %i.fa.fa-cog
-.groups
-  = link_to  class: "/groups/messages" do
+.chat-side
+  .side-header
+    .side-header__box
+      %p.side-header__box__user-name
+        = current_user.name
+      %ul.side-header__box__menu
+        %li.side-header__box__menu__new-group
+          = link_to new_group_path do
+            %i.fa.fa-edit
+        %li.side-header__box__menu__edit-user
+          = link_to edit_user_path(current_user) do
+            %i.fa.fa-cog
+  .groups
     .group
-      %p.group__group-name sampleグループ
-      %p.group__latest-message ど
+      - current_user.groups.each do |group|  
+        = link_to  class: "/groups/messages" do
+          .group
+            %p.group__group-name sampleグループ
+            %p.group__latest-message ど
