--- a/app/assets/stylesheets/chatspace.scss
+++ b/app/assets/stylesheets/chatspace.scss
@@ -61,7 +61,7 @@
           margin-left: 10px;
         }
       }
-      &__text {
+      &__lower-message__content {
         color: $black;
         font-size: 14px;
         margin-bottom: 10px;
