--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,12 +11,12 @@
     = link_to  class: "/groups/edit" do
       .main-header__edit-btn Edit
   .messages
-    = render partial: "messages/message", locals: { message: @message }
+    = render @messages
   .form
-    %form#new_message.new_message{"accept-charset" => "UTF-8"}
+    = form_for [@group, @message] do |f|
       .input-box
-        %input#message_content.input-box__text{:placeholder => "type a message", :type => "text"}/
-        %label.input-box__image
+        = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+        = f.label :image, class: 'input-box__image' do
           %i.fa.fa-image
-          %input#message_image.input-box__image__file
-      %input.submit-btn{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
+          = f.file_field :image, class: 'input-box__image__file'
+      = f.submit 'Send', class: 'submit-btn'
