--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,16 +4,18 @@
   .main-header
     .main-header__left-box
       %h2.main-header__left-box__current-group
-        sampleグループ
+        = @group.name
       %ul.main-header__left-box__member-list
         Member：
-        %li.main-header__left-box__member-list__member ryu
+        %li.main-header__left-box__member-list__member 
+        - @group.users.each do |user|
+          = user.name
     = link_to  class: "/groups/edit" do
       .main-header__edit-btn Edit
   .messages
     = render @messages
   .form
-    = form_for [@group, @message] do |f|
+    = form_for([@group, @message], html: {id: 'new_message'}) do |f|
       .input-box
         = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
         = f.label :image, class: 'input-box__image' do
