--- a/app/assets/stylesheets/chatspace.scss
+++ b/app/assets/stylesheets/chatspace.scss
@@ -30,6 +30,7 @@
       padding: 0 20px;
       margin-top: 30px;
       border: solid 1px $lightblue;
+      color: $lightblue;
       position: absolute;
       right: 40px;
     }
